# Prism

./: package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  lib.rs  worktree.rs
src/components/analytics/: TokenDashboard.tsx
src/components/chat/: ChatMain.tsx  InputBar.tsx  MessageBubble.tsx  MessageThread.tsx  ThreadInputBar.tsx  ThreadView.tsx
src/components/layout/: AppShell.tsx  SettingsPanel.tsx
src/components/project/: NewThreadDialog.tsx  ProjectOverview.tsx
src/components/sidebar/: NewProjectDialog.tsx  ProjectSidebar.tsx  SessionItem.tsx  Sidebar.tsx
src/components/tools/: BashCard.tsx  EditCard.tsx  GenericToolCard.tsx  GlobCard.tsx  PermissionCard.tsx  ReadCard.tsx  ToolCard.tsx
src/lib/: parser.ts  tauri.ts
src/stores/: analyticsStore.ts  projectStore.ts  sessionStore.ts  settingsStore.ts
src/styles/: globals.css  tokens.css
